--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,30 @@
 
 #r1{
 	z-index:10;
-	margin-left:-8px;
+	position:fixed;
+	left:0;
+	bottom:0;
 }
 
 #r2{
-	margin-top:-8px;
-	margin-left:-8px;
+	z-index:10;
+	position:fixed;
+	left:0;
+	top:0;
+}
+
+#r3{
+	z-index:10;
+	position:fixed;
+	left:0;
+	top:0;
+}
+
+#r4{
+	z-index:10;
+	position:fixed;
+	right:0;
+	top:0;
 }
 
 body{
@@ -18,13 +36,16 @@ body{
 }
 
 .main {
+	
+	z-index:-1;
 	display:grid;
+	position:absolute;
 	width:2100px;
   --s: 80px;  /* size  */
   --m: 1px;    /* margin */
   --f: calc(var(--s) * 1.732 + 4 * var(--m) - 1px);
-  padding-bottom:80px;  
-  padding-top:80px;
+  padding-top:200px;
+   padding-bottom:200px;
 }
 
 .container {
