--- a/public/style.css
+++ b/public/style.css
@@ -36,8 +36,6 @@ body{
 }
 
 .main {
-	
-	z-index:-1;
 	display:grid;
 	position:absolute;
 	width:2100px;
@@ -45,7 +43,8 @@ body{
   --m: 1px;    /* margin */
   --f: calc(var(--s) * 1.732 + 4 * var(--m) - 1px);
   padding-top:200px;
-   padding-bottom:200px;
+  padding-bottom:200px;
+  user-select: none;
 }
 
 .container {
@@ -63,7 +62,7 @@ body{
   font-size:initial;
   clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
   margin-bottom: calc(var(--m) - var(--s) * 0.2885);
-  background-color:#333333;
+  background-color: white;
 }
 
 .container::before {
@@ -76,4 +75,89 @@ body{
 
 img{
   position:absolute;
+  pointer-events: none;
+}
+
+.hidden{
+  display:none;
+}
+
+#passbutton{
+	width:215px;
+	height:50px;
+	padding:5px;
+    font-size:15px;
+}
+
+#text{
+	font-size:20px;
+	color:white;
+}
+
+#error{
+	font-size:18px;
+	color:red;
+	display:none;
+	font-weight:800;
+}
+
+h1{
+	font-size:40px;
+	color:white;
+}
+
+input{
+	width:200px;
+	height:45px;
+	padding-left:5px;
+	padding-right:5px;
+	font-size:20px;
+	text-align:center;
+}
+
+#lightbox {
+  z-index:100;
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:100%;
+  height:100%;
+  background-color:rgba(0,0,0,1); 
+}
+
+#message {
+    width:80%;
+    background-color:#777777;
+	border:3px solid white;
+    text-align:center;
+    font-family: 'PT Mono', monospace;
+    
+    /* Center the message in the lightbox */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left:20px;
+	padding-right:20px;
+	padding-top:100px;
+	padding-bottom:100px;
+	font-size:14px;
+}
+
+
+#pass1,#pass2,#numplay{
+	z-index:101;
+	position:fixed;
+	color:white;
+	font-size:30px;
+	margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+	display:none;
+}
+
+#numplay{
+	top:80px;
 }
