--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ body {
 	font-size: initial;
 	clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
 	margin-bottom: calc(var(--m) - var(--s) * 0.2885);
-	background-color: #777777;
+	background-image: url(images/fogTile.svg);
 	background-size: 100% 100%;
 }
 
