--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
 /*https://pixabay.com/illustrations/camouflage-military-texture-1541188/*/
 
 
+
 #r1{
 	z-index:10;
 	position:fixed;
@@ -11,7 +12,7 @@
 	background-image: url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:12vh;
+	height:17vh;
 	border-top:thick solid white;
 	
 }
@@ -65,7 +66,7 @@ body::-webkit-scrollbar{
 	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:12vh;
+	height:17vh;
 }
 
 
@@ -289,7 +290,7 @@ input {
 @media only screen and (min-width: 600px) {
 	
 	#r1,#r5{
-		height:16vh;
+		height:18vh;
 	}
 	
 	#r3{
@@ -360,4 +361,81 @@ h1{
     width:30%;
 }
 
+}
+
+#movebuttondiv{
+	position:absolute;
+	bottom:3vh;
+	z-index:101;
+}
+
+
+#up11{
+	position:fixed;
+	z-index:300;
+	bottom:10%;
+	right:34%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
+}
+
+#right{
+	position:fixed;
+	z-index:300;
+	rotate: 90deg;
+	bottom:6.5%;
+	right:24%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
+}
+
+#down{
+	position:fixed;
+	z-index:300;
+	rotate: 180deg;
+	bottom:3%;
+	right:34%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
+}
+
+#left{
+	position:fixed;
+	z-index:300;
+	rotate: 270deg;
+	bottom:6.5%;
+	right:44%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
+}
+
+#plus{
+	position:fixed;
+	z-index:300;
+	bottom:10%;
+	left:30%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
+}
+
+#minus{
+	position:fixed;
+	z-index:300;
+	rotate: 180deg;
+	bottom:3%;
+	left:30%;
+	display:none;
+	pointer-events:initial;
+	width:60px;
+	height:60px;
 }
