--- a/public/style.css
+++ b/public/style.css
@@ -137,7 +137,7 @@ img {
 	display: none;
 }
 
-#passbutton{
+#passbutton, #ok{
 	width:215px;
 	height:50px;
 	padding:5px;
@@ -154,11 +154,12 @@ img {
 	color:black;
 }
 
-#text{
-	font-size:20px;
-	color:white;
-	font-family:'Black Ops One', cursive;
+#ok:hover{
+	background-color:white;
+	border:2px solid #222222;
+	color:black;
 }
+
 
 #error {
 	font-size: 18px;
@@ -206,8 +207,8 @@ input {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding-left:10px;
-	padding-right:10px;
+    padding-left:30px;
+	padding-right:30px;
 	padding-top:100px;
 	padding-bottom:100px;
 	font-size:14px;
@@ -327,7 +328,7 @@ input {
     width:50%;
 }
 
-#passbutton{
+#passbutton, #ok{
 	font-size:25px;
 }
 
@@ -350,7 +351,7 @@ h1{
 	font-size:3vh;
 }
 
-#passbutton{
+#passbutton, #ok{
 	margin-top:10px;
 	padding:9px;
 }
@@ -446,4 +447,26 @@ h1{
 	pointer-events:initial;
 	width:60px;
 	height:60px;
+}
+
+#text1,#text2{
+	font-size:20px;
+	color:white;
+	font-family:'Black Ops One', cursive;
+}
+
+#ok{
+	display:none;
+}
+
+#info1{
+	color:white;
+	font-weight:500;
+	display:none;
+}
+
+#info2{
+	color:white;
+	font-weight:500;
+	display:none;
 }
