--- a/public/style.css
+++ b/public/style.css
@@ -215,18 +215,7 @@ input {
 }
 
 
-#infodiv{
-	z-index:101;
-	position:fixed;
-    left: 0;
-    right: 0;
-	top:3vh;
-	display:grid;
-	grid-template-areas: 
-	'one'
-	'two'
-	'three';
-}
+
 
 #infantinfo{
 	grid-area:soldier;
@@ -251,17 +240,6 @@ input {
 	'soldier tank artillery';
 }
 
-#pass1,#pass2,#numplay{
-	font-family:'Black Ops One', cursive;
-	z-index:101;
-	color:white;
-	font-size:2.5vh;
-
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	display: none;
-}
 
 #turn{
 	font-family:'Black Ops One', cursive;
@@ -469,4 +447,49 @@ h1{
 	color:white;
 	font-weight:500;
 	display:none;
+}
+
+#startbutton{
+	display:none;
+	width:40%;
+	height:100px;
+	padding:5px;
+    font-family:'Black Ops One', cursive;
+    border:2px solid white;
+	background-color:#222222;
+	color:white;
+	position:fixed;
+	font-size:2.5vh;
+	position:fixed;
+	right:7vh;
+	top:3vh;
+}
+
+#startbutton:hover{
+	background-color:white;
+	border:2px solid #222222;
+	color:black;
+}
+
+
+#pass1,#pass2,#numplay{
+	font-family:'Black Ops One', cursive;
+	z-index:101;
+	color:white;
+	font-size:2.1vh;
+	display: none;
+}
+
+#infodiv{
+	padding:10px;
+	border: 2px solid white;
+	z-index:101;
+	position:fixed;
+    left: 7vh;
+	top:3vh;
+	display:grid;
+	grid-template-areas: 
+	'one'
+	'two'
+	'three';
 }
