--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body{
 	overflow:hidden;
 }
 
+
 #r1{
 	z-index:10;
 	position:fixed;
@@ -14,7 +15,7 @@ body{
 	background-image: url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:12vh;
+	height:17vh;
 	border-top:thick solid white;
 	
 }
@@ -63,7 +64,7 @@ body{
 	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:12vh;
+	height:17vh;
 }
 
 
@@ -121,6 +122,8 @@ body{
 	background-image: url(images/fogTile.svg);
 	background-size: 100% 100%;
 }
+
+
 /*https://css-tricks.com/hexagons-and-beyond-flexible-responsive-grid-patterns-sans-media-queries/*/
 
 img {
@@ -134,7 +137,7 @@ img {
 	display: none;
 }
 
-#passbutton{
+#passbutton, #ok{
 	width:215px;
 	height:50px;
 	padding:5px;
@@ -151,11 +154,12 @@ img {
 	color:black;
 }
 
-#text{
-	font-size:20px;
-	color:white;
-	font-family:'Black Ops One', cursive;
+#ok:hover{
+	background-color:white;
+	border:2px solid #222222;
+	color:black;
 }
+
 
 #error {
 	font-size: 18px;
@@ -203,8 +207,8 @@ input {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding-left:10px;
-	padding-right:10px;
+    padding-left:30px;
+	padding-right:30px;
 	padding-top:100px;
 	padding-bottom:100px;
 	font-size:14px;
@@ -250,6 +254,7 @@ input {
 	grid-area:start;
 	
 }
+
 #numplay {
 	grid-area: three;
 }
@@ -294,7 +299,7 @@ input {
     width:50%;
 }
 
-#passbutton{
+#passbutton, #ok{
 	font-size:25px;
 }
 
@@ -314,7 +319,7 @@ h1{
 
 @media only screen and (min-width: 1000px) {
 
-#passbutton{
+#passbutton, #ok{
 	margin-top:10px;
 	padding:9px;
 }
