--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ body{
 	background-image: url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:22vh;
+	height:17vh;
 	border-top:thick solid white;
 	
 }
@@ -28,7 +28,7 @@ body{
 	left:0;
 	top:0;
 	width:100vw;
-	height:25vh;
+	height:16vh;
 	border-bottom:thick solid white;
 }
 
@@ -64,7 +64,7 @@ body{
 	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('/images/camo.jpg');
 	background-size: cover;
 	width:100vw;
-	height:22vh;
+	height:17vh;
 }
 
 
@@ -76,7 +76,7 @@ body{
 	left:0;
 	top:0;
 	width:100vw;
-	height:25vh;
+	height:16vh;
 }
 
 
@@ -244,8 +244,7 @@ input {
 #turn{
 	display:none;
 	padding:5px;
-	padding-top:20px;
-	padding-bottom:20px;
+	padding-top:33px;
 	text-align:center;
     font-family:'Stalinist One', cursive;
     border:2px solid white;
@@ -349,7 +348,7 @@ h1{
 	position:fixed;
 	z-index:300;
 	bottom:10%;
-	right:26%;
+	right:34%;
 	display:none;
 	pointer-events:initial;
 	width:60px;
@@ -361,7 +360,7 @@ h1{
 	z-index:300;
 	rotate: 90deg;
 	bottom:6.5%;
-	right:8%;
+	right:24%;
 	display:none;
 	pointer-events:initial;
 	width:60px;
@@ -373,7 +372,7 @@ h1{
 	z-index:300;
 	rotate: 180deg;
 	bottom:3%;
-	right:26%;
+	right:34%;
 	display:none;
 	pointer-events:initial;
 	width:60px;
@@ -396,7 +395,7 @@ h1{
 	position:fixed;
 	z-index:300;
 	bottom:10%;
-	left:15%;
+	left:30%;
 	display:none;
 	pointer-events:initial;
 	width:60px;
@@ -408,7 +407,7 @@ h1{
 	z-index:300;
 	rotate: 180deg;
 	bottom:3%;
-	left:15%;
+	left:30%;
 	display:none;
 	pointer-events:initial;
 	width:60px;
@@ -441,18 +440,16 @@ h1{
 	z-index:500;
 	display:grid;
 	grid-template-areas:
-	'info'
-	'start'
-	'turn';
+	'info start turn';
 	position:fixed;
 	top:3vh;
-	left:8%;
+	left:11.5%;
 	width:84%;
 	
 }
 
 #startbutton{
-	display:none;
+	display:initial;
 	padding:5px;
     font-family:'Stalinist One', cursive;
     border:2px solid white;
@@ -460,8 +457,6 @@ h1{
 	color:white;
 	font-size:2.5vh;
 	grid-area:start;
-	padding-top:20px;
-	padding-bottom:20px;
 }
 
 #startbutton:hover{
@@ -483,7 +478,10 @@ h1{
 	padding:15px;
 	padding-left:15%;
 	border: 2px solid white;
-	z-index:101;
+	z-index:99;
+	position:fixed;
+    left: 7vh;
+	top:3vh;
 	display:grid;
 	grid-template-areas: 
 	'one'
