--- a/public/style.css
+++ b/public/style.css
@@ -590,6 +590,7 @@ h1{
 
     #totaldiv{
 	width:91%;
+	}
 
 }
 
@@ -662,8 +663,8 @@ h1{
 
 @media only screen and (min-width: 1600px) {
 
-	     #totaldiv{
-	width:105%;
+	#totaldiv{
+		width:105%;
 	}
 
 }
