--- a/public/style.css
+++ b/public/style.css
@@ -159,6 +159,24 @@ img {
 	display: none;
 }
 
+h2{
+	position:absolute;
+	font-size:15px;
+	height:20px;
+	font-family: 'Stalinist One', cursive;
+	justify-content: center;
+	align-items: center;
+}
+
+.unitHealth{
+	margin-top:10px;
+	color: #00ff00;
+}
+.unitAction{
+	margin-top:30px;
+	color: #ddbb44;
+}
+
 #passbutton, #ok{
 	width:215px;
 	height:50px;
