--- a/public/style.css
+++ b/public/style.css
@@ -110,7 +110,7 @@ body{
 
 #main {
 	display: grid;
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
@@ -653,8 +653,6 @@ h2{
 
 #turn{
 	padding-top:33px;
-	padding-right:3.6rem;
-	padding-left:3.6rem;
 }
 
 		#right{
